feat: Add files of Day 18 and modification to existing files
